--- a/package.json
+++ b/package.json
@@ -7,10 +7,35 @@
     "dev": "nuxt dev",
     "generate": "nuxt generate",
     "preview": "nuxt preview",
-    "postinstall": "nuxt prepare"
+    "postinstall": "nuxt prepare",
+    "db:generate": "drizzle-kit generate",
+    "db:migrate": "drizzle-kit migrate:dev"
   },
   "dependencies": {
+    "@nuxtjs/supabase": "^1.3.5",
+    "@supabase/supabase-js": "^2.45.1",
+    "@types/bcrypt": "^5.0.2",
+    "axios": "^1.7.4",
+    "bcrypt": "^5.1.1",
+    "bootstrap": "^5.3.3",
+    "bootstrap-icons": "^1.11.3",
+    "dotenv": "^16.4.5",
+    "drizzle-orm": "^0.33.0",
+    "jsonwebtoken": "^9.0.2",
     "nuxt": "^3.12.4",
-    "vue": "latest"
+    "pg": "^8.12.0",
+    "postgres": "^3.4.4",
+    "vue": "latest",
+    "vue-cal": "^4.9.0"
+  },
+  "devDependencies": {
+    "@types/jsonwebtoken": "^9.0.6",
+    "@types/pg": "^8.11.6",
+    "autoprefixer": "^10.4.20",
+    "drizzle-kit": "^0.24.0",
+    "postcss": "^8.4.41",
+    "tailwindcss": "^3.4.10",
+    "typescript": "^5.5.4",
+    "vue-tsc": "^2.0.29"
   }
 }
