--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@nuxtjs/supabase": "^1.3.5",
     "@supabase/supabase-js": "^2.45.1",
     "@types/bcrypt": "^5.0.2",
+    "@vercel/speed-insights": "^1.0.12",
     "axios": "^1.7.4",
     "bcrypt": "^5.1.1",
     "bootstrap": "^5.3.3",
