--- a/package.json
+++ b/package.json
@@ -12,6 +12,11 @@
     "db:migrate": "drizzle-kit migrate:dev"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^6.6.0",
+    "@fortawesome/free-brands-svg-icons": "^6.6.0",
+    "@fortawesome/free-regular-svg-icons": "^6.6.0",
+    "@fortawesome/free-solid-svg-icons": "^6.6.0",
+    "@fortawesome/vue-fontawesome": "^3.0.8",
     "@nuxtjs/supabase": "^1.3.5",
     "@supabase/supabase-js": "^2.45.1",
     "@types/bcrypt": "^5.0.2",
